--- a/META.yml
+++ b/META.yml
@@ -32,5 +32,5 @@ requires:
   strictures: 1
 resources:
   license: http://dev.perl.org/licenses/
-  repository: git://eris.cobaltirc.org/moox-role-poe-emitter.git
+  repository: http://github.com/avenj/moox-role-poe-emitter.git
 version: 0.06_01
