--- a/META.yml
+++ b/META.yml
@@ -17,7 +17,7 @@ name: MooX-Role-POE-Emitter
 provides:
   MooX::Role::POE::Emitter:
     file: lib/MooX/Role/POE/Emitter.pm
-    version: 0.09
+    version: 0.09_01
 requires:
   Carp: 0
   Exporter: 0
