dist.ini tweaks

--- a/dist.ini
+++ b/dist.ini
@@ -24,13 +24,18 @@ repository.url = git://github.com/avenj/moox-role-poe-emitter.git
 repository.web = https://github.com/avenj/moox-role-poe-emitter
 repository.type = git
 
+[ConfirmRelease]
 [CheckChangeLog]
+
 [PkgVersion]
+
 [ReadmeFromPod]
 [ReadmeMarkdownFromPod]
+
+[CheckExtraTests]
 [PodCoverageTests]
 [PodSyntaxTests]
-[ConfirmRelease]
+[Test::ReportPrereqs]
 
 [Prereqs]
 perl          = 5.10.1
