--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name    = MooX-Role-POE-Emitter
 author  = Jon Portnoy <avenj@cobaltirc.org>
 license = Perl_5
 copyright_holder = Jon Portnoy <avenj@cobaltirc.org>
-version = 0.120001
+version = 0.120002
 
 [@Basic]
 
@@ -35,6 +35,8 @@ repository.type = git
 [CheckExtraTests]
 [PodCoverageTests]
 [PodSyntaxTests]
+[Test::CPAN::Changes]
+[Test::DistManifest]
 [Test::ReportPrereqs]
 
 [Prereqs]
@@ -44,12 +46,14 @@ strictures    = 1
 Scalar::Util  = 0
 Try::Tiny     = 0
 
-POE           = 0
+POE = 0
 
-Moo                    = 1.000007
-MooX::Role::Pluggable  = 0.11
-MooX::Types::MooseLike = 0.15
-namespace::clean       = 0.23
+Moo                    = 1
+Moo::Role              = 0
+MooX::Role::Pluggable  = 0.12
+
+Types::Standard        = 0
+Type::Tiny             = 0.022
 
 [Prereqs / TestRequires]
 Test::More = 0.88
