--- a/dist.ini
+++ b/dist.ini
@@ -46,11 +46,18 @@ strictures    = 1
 Scalar::Util  = 0
 Try::Tiny     = 0
 
+Class::Method::Modifiers = 0
+
 POE = 0
 
 Moo                    = 1
+MooX::late             = 0.014
 Moo::Role              = 0
+
 MooX::Role::Pluggable  = 0.12
+
+List::Objects::WithUtils = 2.006
+List::Objects::Types     = 1
 
 Types::Standard        = 0
 Type::Tiny             = 0.022
