--- a/dist.ini
+++ b/dist.ini
@@ -39,32 +39,7 @@ repository.type = git
 [Test::DistManifest]
 [Test::ReportPrereqs]
 
-[Prereqs]
-perl          = 5.10.1
-Carp          = 0
-strictures    = 1
-Scalar::Util  = 0
-Try::Tiny     = 0
-
-Class::Method::Modifiers = 0
-
-POE = 0
-
-Moo                    = 1
-MooX::late             = 0.014
-Moo::Role              = 0
-
-MooX::Role::Pluggable  = 0.12
-
-List::Objects::WithUtils = 2.007
-List::Objects::Types     = 1
-
-Types::Standard        = 0
-Type::Tiny             = 0.022
-
-[Prereqs / TestRequires]
-Test::More = 0.88
-Test::Exception = 0
+[Prereqs::FromCPANfile]
 
 [Run::AfterBuild]
 run = cp %d%pREADME.mkdn .
