--- a/dist.ini
+++ b/dist.ini
@@ -32,7 +32,7 @@ repository.type = git
 [ReadmeFromPod]
 [ReadmeMarkdownFromPod]
 
-[CheckExtraTests]
+;[CheckExtraTests]
 [PodCoverageTests]
 [PodSyntaxTests]
 [Test::CPAN::Changes]
